# gui

./: Cargo.toml
examples/: basic_use.rs  deserialization.json  deserialization.rs
gui/: Cargo.toml
gui/examples/: backend_use.rs  basic_use.rs  deserialization.json  deserialization.rs  multiple_windows.rs
gui/src/: command.rs  container.rs  event.rs  instance.rs  layout.rs  lib.rs  pivot.rs  position.rs  signal.rs  size.rs  view.rs  widget.rs
gui_wgpu/: Cargo.toml
gui_wgpu/examples/: basic_use.rs
gui_wgpu/src/: container.wgsl  gui.wgsl  gui_error.rs  lib.rs  renderer.rs  texture.rs
gui_winit/: Cargo.toml
gui_winit/src/: lib.rs
src/: command.rs  container.rs  size.rs  widget.rs
