[package]
name = "gui_wgpu"
version = "0.2.0"
edition = "2021"
resolver = "2"

[dependencies]
bytemuck = { version = "1.7.3", features = ["derive"] }
gui = { path = "../gui" }
image = "0.23.14"
wgpu = "0.12.0"

[dev-dependencies]
gui_wgpu = { path = "../gui_wgpu" }
gui_winit = { path = "../gui_winit" }
tokio = { version = "1.16.1", features = ["full"] }
serde_json = "1.0.78"
wgpu = "0.12.0"
winit = "0.26.1"
